--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
     "git-url-parse": "^6.0.1",
     "jsdoc": "^3.4.3",
     "jsdoc-babel": "^0.3.0",
+    "jsdonk": "^0.3.3",
     "node-sass": "^3.11.2",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.3.2",
-    "sinon": "^1.17.6",
-    "jsdonk": "^0.3.3"
+    "sinon": "^1.17.6"
   },
   "main": "lib/index.js",
   "engines": {
@@ -76,7 +76,5 @@
       "test/test.js"
     ]
   },
-  "dependencies": {
-    "immutable": "^3.8.1"
-  }
+  "dependencies": {}
 }
